Playing with redux on samples
